Fix table cell alignment

--- a/static/css/mpg.css
+++ b/static/css/mpg.css
@@ -289,6 +289,12 @@ button, input {
 
 }
 
+.table td {
+
+    vertical-align: middle;
+
+}
+
 #mpg-create-user-modal {
 
     top: 50px;
